--- a/Birdy/Birdy/Storyboards/Sights.storyboard
+++ b/Birdy/Birdy/Storyboards/Sights.storyboard
@@ -14,11 +14,11 @@
                         <viewControllerLayoutGuide type="bottom" id="Oo1-PS-OGF"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="OGt-h0-lFU">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9r5-3O-Lhc">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9r5-3O-Lhc">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="487"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="70n-lC-ZQs" id="MOM-o5-YGc"/>
@@ -34,6 +34,7 @@
                             <constraint firstItem="9r5-3O-Lhc" firstAttribute="leading" secondItem="OGt-h0-lFU" secondAttribute="leading" id="TOl-hw-OM9"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" title="Sightings" id="sjm-zX-pif">
                         <barButtonItem key="backBarButtonItem" title="Back" id="dje-Ba-D9b"/>
                         <barButtonItem key="rightBarButtonItem" title="Add" id="P46-FG-dGl"/>
