updated birds list load service add user registration service

--- a/Birdy/Birdy/Storyboards/Sights.storyboard
+++ b/Birdy/Birdy/Storyboards/Sights.storyboard
@@ -37,7 +37,11 @@
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" title="Sightings" id="sjm-zX-pif">
                         <barButtonItem key="backBarButtonItem" title="Back" id="dje-Ba-D9b"/>
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="P46-FG-dGl"/>
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="P46-FG-dGl">
+                            <connections>
+                                <segue destination="qpY-ih-tVB" kind="show" id="Lne-XR-lAx"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="9r5-3O-Lhc" id="GPs-E3-7kT"/>
@@ -45,7 +49,43 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BOI-fr-RQn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1173" y="427"/>
+            <point key="canvasLocation" x="1076" y="427"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="hpZ-2a-ccc">
+            <objects>
+                <viewController id="qpY-ih-tVB" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HQg-QH-QoL"/>
+                        <viewControllerLayoutGuide type="bottom" id="aZL-BY-jrI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7Eo-qd-N1F">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hi3-pZ-2jC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1771" y="427"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="T2V-Ga-k0E">
+            <objects>
+                <viewController id="ZMV-BZ-gbF" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vKX-UG-vgf"/>
+                        <viewControllerLayoutGuide type="bottom" id="8V8-p2-Uv5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lnl-0X-ZYB">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8sq-3i-Rx0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2475" y="427"/>
         </scene>
         <!--Sights-->
         <scene sceneID="MZS-Kh-REs">
