--- a/Birdy/Birdy/Storyboards/Settings.storyboard
+++ b/Birdy/Birdy/Storyboards/Settings.storyboard
@@ -23,8 +23,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yQk-8F-HrN" userLabel="content">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9tU-6e-wbM">
-                                                <rect key="frame" x="47" y="20" width="79" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9tU-6e-wbM">
+                                                <rect key="frame" x="47" y="20" width="84" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
@@ -40,8 +40,8 @@
                                                             <outlet property="delegate" destination="aeJ-dT-qYv" id="g0w-c7-rct"/>
                                                         </connections>
                                                     </textField>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VbF-bH-AnK">
-                                                        <rect key="frame" x="20" y="20" width="74" height="21"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VbF-bH-AnK">
+                                                        <rect key="frame" x="20" y="20" width="138" height="21"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <nil key="highlightedColor"/>
@@ -145,6 +145,12 @@
                                                     <action selector="onSignout:" destination="aeJ-dT-qYv" eventType="touchUpInside" id="WNr-eg-GiR"/>
                                                 </connections>
                                             </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YC1-Vl-1TR">
+                                                <rect key="frame" x="139" y="31" width="0.0" height="0.0"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -161,10 +167,12 @@
                                             <constraint firstItem="hHU-OZ-XMO" firstAttribute="top" secondItem="9tU-6e-wbM" secondAttribute="bottom" constant="8" id="RW8-h3-XiJ"/>
                                             <constraint firstItem="fht-dF-lMM" firstAttribute="top" secondItem="hHU-OZ-XMO" secondAttribute="bottom" constant="17" id="T09-sb-W7F"/>
                                             <constraint firstAttribute="bottom" secondItem="chL-ge-pMw" secondAttribute="bottom" constant="20" id="UPt-td-iAN"/>
+                                            <constraint firstItem="YC1-Vl-1TR" firstAttribute="leading" secondItem="9tU-6e-wbM" secondAttribute="trailing" constant="8" id="UxZ-ee-aME"/>
                                             <constraint firstAttribute="trailing" secondItem="chL-ge-pMw" secondAttribute="trailing" constant="28" id="XQG-kU-9Jk"/>
                                             <constraint firstAttribute="trailing" secondItem="hHU-OZ-XMO" secondAttribute="trailing" constant="28" id="YTt-9N-lgd"/>
                                             <constraint firstItem="9tU-6e-wbM" firstAttribute="top" secondItem="yQk-8F-HrN" secondAttribute="top" constant="20" id="gjV-gw-zjH"/>
                                             <constraint firstItem="u1s-1b-vH8" firstAttribute="top" secondItem="twc-Gf-hOZ" secondAttribute="bottom" id="jjj-OZ-MwC"/>
+                                            <constraint firstItem="YC1-Vl-1TR" firstAttribute="centerY" secondItem="9tU-6e-wbM" secondAttribute="centerY" id="pzw-Oj-98G"/>
                                             <constraint firstItem="chL-ge-pMw" firstAttribute="top" secondItem="u1s-1b-vH8" secondAttribute="bottom" constant="28" id="t2x-Tx-CEh"/>
                                         </constraints>
                                     </view>
@@ -196,7 +204,7 @@
                         <outlet property="contactPhoneTF" destination="VYP-9e-Mel" id="FA1-Gg-G6m"/>
                         <outlet property="passwordConfirmTF" destination="zmY-tz-rqu" id="sYv-tj-O60"/>
                         <outlet property="passwordTF" destination="9Ja-7I-E7B" id="Xg2-Ni-3pE"/>
-                        <outlet property="usernameL" destination="9tU-6e-wbM" id="E1q-ls-VEU"/>
+                        <outlet property="usernameL" destination="YC1-Vl-1TR" id="6PB-Yy-nBk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mxP-xF-KBX" userLabel="First Responder" sceneMemberID="firstResponder"/>
