--- a/Birdy/Birdy/Storyboards/Sights.storyboard
+++ b/Birdy/Birdy/Storyboards/Sights.storyboard
@@ -74,7 +74,7 @@
                                             <constraint firstAttribute="width" secondItem="yRk-GI-SIl" secondAttribute="height" multiplier="1:1" id="NMR-WK-aVn"/>
                                         </constraints>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YNv-tR-mJy" userLabel="imgSelect">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YNv-tR-mJy" userLabel="imgSelect">
                                         <rect key="frame" x="0.0" y="0.0" width="114" height="114"/>
                                         <connections>
                                             <action selector="onSelectImage:" destination="qpY-ih-tVB" eventType="touchUpInside" id="gvz-qL-zYN"/>
@@ -83,9 +83,13 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="YNv-tR-mJy" firstAttribute="leading" secondItem="yRk-GI-SIl" secondAttribute="leading" id="7Ui-UD-BZP"/>
                                     <constraint firstAttribute="bottom" secondItem="yRk-GI-SIl" secondAttribute="bottom" id="Aob-2K-sJR"/>
                                     <constraint firstItem="yRk-GI-SIl" firstAttribute="leading" secondItem="tuy-Td-ekt" secondAttribute="leading" id="DIZ-nZ-qCZ"/>
+                                    <constraint firstItem="YNv-tR-mJy" firstAttribute="bottom" secondItem="yRk-GI-SIl" secondAttribute="bottom" id="Eqg-Os-1Go"/>
                                     <constraint firstAttribute="height" constant="114" id="JGx-mA-eFs"/>
+                                    <constraint firstItem="YNv-tR-mJy" firstAttribute="trailing" secondItem="yRk-GI-SIl" secondAttribute="trailing" id="KBD-4M-lwb"/>
+                                    <constraint firstItem="YNv-tR-mJy" firstAttribute="top" secondItem="yRk-GI-SIl" secondAttribute="top" id="PMR-cy-XWv"/>
                                     <constraint firstItem="yRk-GI-SIl" firstAttribute="top" secondItem="tuy-Td-ekt" secondAttribute="top" id="WGv-BE-uDc"/>
                                     <constraint firstAttribute="trailing" secondItem="yRk-GI-SIl" secondAttribute="trailing" id="mMV-U5-6Kn"/>
                                     <constraint firstAttribute="width" constant="114" id="rd5-Af-xFa"/>
@@ -168,8 +172,8 @@
                                     <outlet property="delegate" destination="qpY-ih-tVB" id="BFw-9P-AyG"/>
                                 </connections>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xyt-gJ-Jzz">
-                                <rect key="frame" x="20" y="366" width="560" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xyt-gJ-Jzz">
+                                <rect key="frame" x="20" y="366" width="560" height="33"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <state key="normal" title="Add Bird"/>
                                 <connections>
@@ -218,6 +222,44 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hi3-pZ-2jC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1771" y="427"/>
+        </scene>
+        <!--Birds Sub List View Controller-->
+        <scene sceneID="qRS-3G-19j">
+            <objects>
+                <viewController storyboardIdentifier="BirdsSubVC" id="E9R-yL-9c7" customClass="BirdsSubListViewController" customModule="Birdy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="m0V-On-5RC"/>
+                        <viewControllerLayoutGuide type="bottom" id="jWY-9b-wE7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2hj-Wm-FFY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FIe-il-Ai6">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="E9R-yL-9c7" id="n4u-YZ-lKW"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FIe-il-Ai6" firstAttribute="leading" secondItem="2hj-Wm-FFY" secondAttribute="leading" id="7Q7-ua-0X5"/>
+                            <constraint firstItem="FIe-il-Ai6" firstAttribute="top" secondItem="m0V-On-5RC" secondAttribute="bottom" id="DKn-fx-AR0"/>
+                            <constraint firstItem="jWY-9b-wE7" firstAttribute="top" secondItem="FIe-il-Ai6" secondAttribute="bottom" id="pYz-YA-DF0"/>
+                            <constraint firstAttribute="trailing" secondItem="FIe-il-Ai6" secondAttribute="trailing" id="yy9-Iw-8aZ"/>
+                        </constraints>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" id="c0D-qa-KyX"/>
+                    <connections>
+                        <outlet property="tableView" destination="FIe-il-Ai6" id="NRS-hQ-XUj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Iad-lC-r1d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1561" y="1122"/>
         </scene>
         <!--Add Sight View Controller-->
         <scene sceneID="T2V-Ga-k0E">
