--- a/Birdy/Birdy/Views/BirdCell.xib
+++ b/Birdy/Birdy/Views/BirdCell.xib
@@ -16,7 +16,7 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LMZ-Ct-8G6">
                         <rect key="frame" x="8" y="8" width="65" height="65"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="65" id="CVx-7a-bOD"/>
                             <constraint firstAttribute="width" constant="65" id="nwH-O4-8jI"/>
